# IS-Course-Work-s2-1

./: .gitignore  LICENSE.txt  README.md  data-structures-trees.sln  et --hard 6bd1270
data-structures-trees/: CMakeLists.txt  CMakeSettings.json  data-structures-trees.vcxproj  data-structures-trees.vcxproj.filters
data-structures-trees/data/: input.txt
data-structures-trees/trees/include/: avl.h  binary_tree.h  bst.h  menu.h  red_black.h
data-structures-trees/trees/src/: avl.cpp  binary_tree.cpp  bst.cpp  main.cpp  menu.cpp  red_black.cpp
